tests/macro_tests/invalid_assoc.stderr
error: expected 'left', 'right', 'prefix' or 'postfix'
 --> $DIR/invalid_assoc.rs:5:13
  |
5 |     #[assoc("up")]
  |             ^^^^
